force-app/main/default/objects/Account/fields/Account_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Age_Days__c</fullName>
    <description>Number of days elapsed since the Account record was created.</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The age of this Account in days since its creation.</inlineHelpText>
    <label>Account Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>