force-app/main/default/objects/Account/fields/Health_Evaluated_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_Evaluated_Date__c</fullName>
    <label>Health Evaluated Date</label>
    <type>DateTime</type>
</CustomField>